objects/adapps__OptimizerPlus_Fields_Page_Layouts_Item__c.object
<CustomObject>
    <fields>
        <fullName>adapps__Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>adapps__Fields_on_Page_Layouts__c</fullName>
        <label>Fields on Page Layouts</label>
        <referenceTo>adapps__OptimizerPlus_Fields_Page_Layouts__c</referenceTo>
        <relationshipLabel>Fields on Page Layouts Items</relationshipLabel>
        <relationshipName>Fields_on_Page_Layouts_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>adapps__Page_Layout__c</fullName>
        <label>Page Layout</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>adapps__OptimizerPlus_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>adapps__Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <label>Fields on Page Layouts Item</label>
    <nameField>
        <label>Fields on Page Layouts Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fields on Page Layouts Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>